# shaheen

./: .gitignore  README.md  package-lock.json  package.json  shaheen.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: ShaheenModule.cpp
android/src/main/java/com/shaheen/: ShaheenModule.java  ShaheenPackage.java
cpp/: ShaheenJSI.cpp  ShaheenJSI.h
ios/: ShaheenModule.h  ShaheenModule.mm
maestro/: connect_wallet.yaml
rust/: Cargo.toml
rust/src/: lib.rs
src/: NativeShaheenSpec.d.ts  NativeShaheenSpec.js  NativeShaheenSpec.ts  ShaheenMobileWalletAdapter.d.ts  ShaheenMobileWalletAdapter.js  ShaheenMobileWalletAdapter.ts  index.d.ts  index.js  index.ts
src/__tests__/: index.test.js  index.test.ts
